style: try to fix the issue that the whiteboard doesn't       grow when notes are adding.

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,7 +16,7 @@
   <body class="min-h-screen flex flex-col text-zinc-800">
     <div class="flex-1 bg-zinc-700 flex items-center justify-center p-8">
       <div
-        class="relative blackboard w-full aspect-video max-w-7xl px-8 pb-10 bg-zinc-100"
+        class="relative blackboard w-full flex-1 aspect-video max-w-7xl px-8 pb-10 bg-zinc-100"
       >
         <h1
           class="text-center handlee text-zinc-800 text-3xl md:text-5xl py-10 md:py-14"
