fix: when the content of a message is longer than   the height of the screen, it can't be display   correctly. just try to fix this.

--- a/src/views/message.ejs
+++ b/src/views/message.ejs
@@ -16,10 +16,10 @@
   </head>
   <body class="min-h-screen flex flex-col h-screen bg-zinc-700 text-zinc-800">
     <div
-      class="w-full max-w-7xl mx-auto h-full p-8 md:px-10 flex flex-col items-center justify-center"
+      class="w-full max-w-7xl mx-auto p-8 md:px-10 flex flex-col items-center justify-center"
     >
       <div
-        class="blackboard w-full h-full p-5 md:p-10 md:h-auto md:aspect-video bg-zinc-100 flex flex-col items-center justify-center"
+        class="blackboard w-full min-h-screen p-5 md:p-10 md:h-auto md:aspect-video bg-zinc-100 flex flex-col items-center justify-center"
       >
         <div
           class="w-full max-w-lg mx-auto flex flex-col bg-<%= message.color %>-200 shadow-xl rounded-md px-5 md:px-12"
