fix: fix long word bug

--- a/src/public/styles/build.css
+++ b/src/public/styles/build.css
@@ -390,6 +390,9 @@
     --tw-font-weight: var(--font-weight-light);
     font-weight: var(--font-weight-light);
   }
+  .break-all {
+    word-break: break-all;
+  }
   .text-blue-400 {
     color: var(--color-blue-400);
   }
