--- a/src/views/message.ejs
+++ b/src/views/message.ejs
@@ -31,7 +31,7 @@
             <p class="text-zinc-600 font-light md:basis-24 md:shrink-0">
               CONTENT:
             </p>
-            <p class="font-light handlee text-2xl">
+            <p class="font-light handlee text-2xl break-all">
               <%= locals.message.text %>
             </p>
           </div>
