--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -43,7 +43,7 @@
             <div
               class="paper <%= msg.style.color %> flex flex-col gap-5 p-5 w-full h-full items-center justify-center"
             >
-              <span class="line-clamp-2 handlee text-2xl text-center">
+              <span class="line-clamp-2 handlee text-2xl text-center break-all">
                 <%= msg.text %>
               </span>
             </div>
