--- a/src/views/message.ejs
+++ b/src/views/message.ejs
@@ -31,7 +31,9 @@
             <p class="text-zinc-600 font-light md:basis-24 md:shrink-0">
               CONTENT:
             </p>
-            <p class="font-light handlee text-2xl wrap-anywhere">
+            <p
+              class="font-light handlee text-2xl whitespace-normal [overflow-wrap:anywhere] hyphens-auto"
+            >
               <%= locals.message.text %>
             </p>
           </div>
@@ -42,7 +44,9 @@
             <p class="text-zinc-600 font-light md:basis-24 md:shrink-0">
               AUTHOR:
             </p>
-            <p class="font-light handlee text-2xl">
+            <p
+              class="font-light handlee text-2xl whitespace-normal [overflow-wrap:anywhere] hyphens-auto"
+            >
               <%= locals.message.username %>
             </p>
           </div>
