--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -44,7 +44,7 @@
               class="paper <%= msg.style.color %> flex flex-col gap-5 p-5 w-full h-full items-center justify-center"
             >
               <span
-                class="line-clamp-2 handlee text-2xl text-center wrap-anywhere"
+                class="line-clamp-2 handlee text-2xl text-center whitespace-normal [overflow-wrap:anywhere] hyphens-auto"
               >
                 <%= msg.text %>
               </span>
